# AttendanceSystem

./: main.py
sys/: pyproject.toml  replit_zip_error_log.txt  requirements.txt
sys/instance/: attendance.db
templates/: admin.html
