[tool.poetry]
name = "attendance-system"
version = "0.1.0"
description = "A Flask-based attendance management system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
pytz = "^2024.2"

[tool.pyright]
# Configuration for Pyright (optional, used for static type checking)
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# Configuration for Ruff (optional, used for linting)
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
# Specifies the build system and its requirements
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
